# Understory

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Jenkinsfile  README.md  test.cpp
cmake/: CMakeDependencies.cmake  CMakeGettextX.cmake  CMakePublish.cmake  FindSDL2.cmake  FindSciter.cmake  FindZeroMQ.cmake  Findminiupnpc.cmake  IconGenerator.cmake
cmake/toolchains/: msys2.cmake  osx.cmake  windows-ci.cmake
cmake/wrappers/: xmakensis.sh  xwindres.sh
cmake/wrappers/makensis/: CMakeLists.txt  makensis.cpp
include/: _understory.h  _version.h  understory.h
prerequisites/msys2/: pkglist_build.txt
src/: UnderStoryApplication.hpp  hash_fnv1a.hpp  main.cpp
src/app/: Application.hpp  CMakeLists.txt  Modal.hpp  USApplication.cpp  USApplication.h  Utility.hpp  main.cpp  resources.conf
src/app/i18n/fr/: UnderStory.po
src/app/navigation/: KeyboardMoveHelper.hpp  MapScaleHelper.hpp  MouseMoveHelper.hpp  ShortcutsTextHelper.hpp
src/app/navigation/base/: BaseUIHelper.hpp  BaseUIPlayerHelper.hpp
src/app/navigation/base/states/: AnimationState.h  KeyboardMovements.h  KeyboardMovements.hpp  MouseMovements.h
src/app/navigation/shaders/grid/: Grid.frag  Grid.hpp  Grid.vert
src/app/navigation/shaders/selectRect/: SelectionRect.frag  SelectionRect.hpp  SelectionRectState.h
src/app/navigation/widgets/: AtomSelectorButton.hpp  Grid.hpp  Panel.hpp  SelectionRectangle.hpp
src/app/navigation/widgets/helpers/: Grid.hpp  SelectionRectangle.hpp
src/app/package/: CMakeLists.txt  app.icns
src/app/package/ifw/: install.js  install.ui
src/app/package/ifw/_i18n/: fr.qm  fr.ts
src/app/shaders/: Shaders.hpp
src/app/shaders/atomSelector/: AtomSelector.hpp
src/app/shaders/grid/: Grid.frag  Grid.hpp
src/app/shaders/rounded/: Rounded.frag  Rounded.hpp  Rounded.vert
src/app/shaders/scroller/: Scroller.hpp
src/app/shaders/selectRect/: SelectionRect.hpp  SelectionRect.vert  SelectionRectState.h  SelectionRectState.hpp
src/app/ui/: CMakeLists.txt  Engine.hpp  EngineInternal.hpp  FontEngine.hpp  Nuklear.hpp  Texture.hpp  nuklear_glfw_gl3.h  us_gl3.hpp
src/app/ui/base/: Shader.hpp
src/app/ui/debug/: FrameTracker.hpp
src/app/ui/layout/: GridLayout.hpp  GridShader.hpp  GridTile.hpp
src/app/ui/nuklear/: CMakeLists.txt  Nuklear.hpp  nuklear_sdl_gl3.h
src/app/utility/: AppBound.hpp  TimelineBound.hpp  UpdateChecker.hpp
src/app/vulkan/: Debug.hpp  Engine.hpp  Utils.hpp
src/app/widgets/: AtomSelectorButton.hpp  CMakeLists.txt  Panel.hpp  ScrollablePanel.hpp  Scroller.hpp  UpdateCheckerWidget.hpp  WidgetHelper.hpp
src/app/widgets/animation/: BaseUIHelper.cpp  BaseUIHelper.h  BaseUIHelper.hpp  BaseUIPlayerHelper.hpp  MatrixAnimator.cpp  MatrixAnimator.h  PlayerMatrixAnimator.hpp  State.hpp  TimelineBound.cpp  TimelineBound.h  TimelineBound.hpp
src/app/widgets/atomSelector/: AtomSelectorButton.hpp  AtomSelectorGrid.hpp
src/app/widgets/base/: AppContainer.hpp  Constraints.hpp  Container.hpp  EventHandlers.hpp  Hoverable.hpp  Shape.hpp  Toggleable.hpp
src/app/widgets/helpers/: Enlighter.hpp  Grid.hpp  SelectionRectangle.hpp
src/app/widgets/navigation/: KeyboardMoveHelper.hpp  KeyboardMovements.hpp  MapScaleHelper.hpp  MouseMoveHelper.hpp  MouseMovements.hpp  MouseState.hpp
src/app/widgets/scroll/: Scissorable.cpp  Scissorable.h  Scissorer.hpp  Scrollable.hpp  ScrollableCanvas.hpp  ScrollableContent.hpp  ScrollablePanel.cpp  ScrollablePanel.h  ScrollablePanel.hpp  Scroller.cpp  Scroller.h  Scroller.hpp  ScrollerHandle.cpp  ScrollerHandle.h  ScrollerHandle.hpp
src/app/widgets/text/: ShortcutsText.hpp  StaticText.hpp
src/base/: CMakeLists.txt  Context.hpp  Debug.hpp  Defaults.hpp  _understory.h  fs_compat.h  translate.h  understory.h  understory.in.h
src/core/: AssetIntegrator.hpp  CMakeLists.txt  Defaults.hpp  FileIntegrator.hpp  UpdateChecker.hpp
src/models/: Asset.capnp  Asset.proto  AssetFetcher.proto  Base.proto  CMakeLists.txt  Character.capnp  Character.proto  File.proto  Handshake.capnp  Heartbeat.proto  Map.proto  Message.capnp  Message.proto  SharedDocument.capnp  User.capnp  User.proto  YoutubeVideo.capnp  YoutubeVideo.proto
src/network/: AtomicQueue.cpp  AtomicQueue.h  AtomicQueue.hpp  CMakeLists.txt  ClientBase.hpp  ClientSocket.cpp  ClientSocket.h  ClientSocket.hpp  HTTPDownloaded.hpp  HTTPDownloader.cpp  HTTPDownloader.hpp  IClientImpl.cpp  IClientImpl.h  IClientImpl.hpp  IPayloadHandler.cpp  IPayloadHandler.h  IPayloadHandler.hpp  IPayloadProcessor.cpp  IPayloadProcessor.h  IPayloadReceiver.cpp  IPayloadReceiver.h  IPayloadReceiver.hpp  IPayloadSender.cpp  IPayloadSender.h  IPayloadSender.hpp  Marshaller.cpp  Marshaller.h  Marshaller.hpp  PayloadLogger.cpp  PayloadLogger.h  PayloadableSocket.hpp  Payloads.h  Payloads.hpp  Server.cpp  Server.h  Server.hpp  SocketHelper.hpp  SpawnedSocket.cpp  SpawnedSocket.h  SpawnedSocket.hpp  (+4 more)
src/network/asio/: time_t_timer.hpp
src/network/helpers/: HTTPDownloader.h
src/network/payloads/: Payloads.h  _Payload.hpp
src/network/payloads/specialized/: Reset.hpp
src/network/services/: AssetFetcher.cpp  AssetFetcher.hpp
src/package/: CMakeLists.txt  _Info.plist  resources.rc
tests/: CMakeLists.txt  local_only.cpp  tests.cpp
tests/ci_tests/: assets.cpp  update_checker.cpp
tests/nw_tests/: network.cpp  update_manifest_dl.cpp
